--- a/RHSummitHaCepCommands/pom.xml
+++ b/RHSummitHaCepCommands/pom.xml
@@ -29,6 +29,7 @@
 		<dependency>
         	<groupId>org.jboss.spec.javax.jms</groupId>
         	<artifactId>jboss-jms-api_1.1_spec</artifactId>
+        	<scope>provided</scope>
 	    </dependency>
 
 		<dependency>
