--- a/RHSummitHaCepModel/pom.xml
+++ b/RHSummitHaCepModel/pom.xml
@@ -8,6 +8,10 @@
   <artifactId>RHSummitHaCepModel</artifactId>
   <description>RH Summit HA CEP Model</description>
   <dependencies>
+  	<dependency>
+  		<groupId>commons-lang</groupId>
+  		<artifactId>commons-lang</artifactId>
+  	</dependency>
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-api</artifactId>
