--- a/RHSummitHaCepEventProducer/pom.xml
+++ b/RHSummitHaCepEventProducer/pom.xml
@@ -36,5 +36,43 @@
 			<version>1.0.13</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<!-- Runtime dependencies. -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-remote-naming</artifactId>
+			<version>1.0.8.Final-redhat-1</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+    		<artifactId>xnio-nio</artifactId>
+    		<version>3.0.10.GA-redhat-1</version>
+    		<scope>runtime</scope>
+    	</dependency>
+    	<dependency>
+    		<groupId>org.hornetq</groupId>
+    		<artifactId>hornetq-jms-client</artifactId>
+    		<scope>runtime</scope>
+    	</dependency>
+
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>/Users/ddoyle/.m2/repository/</classpathPrefix>
+							<classpathLayoutType>repository</classpathLayoutType>
+							<mainClass>org.jboss.ddoyle.rhsummit2014.hacepbrms.eventproducer.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
